# MLSysBench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/baselines/: qwen3_next_aicb_benchmark.json  qwen3_next_aicb_smoke.json
benchmarks/calibration/: README.md  example.schema.json
benchmarks/intake/: README.md  task-cards.md
benchmarks/matrices/: README.md  protocol.schema.json
benchmarks/protocol/: baseline_ladder.schema.json  cli_agent_matched_5_dense_fixture.json  cli_agent_matched_5_sparse_fixture.json  (+3 more)
docs/: README.md  architecture.md  benchmark-protocol.md  competitions.md  data-sources.md  design-proposal.md  environment.md  existing-benchmarks.md  related-work-sources.json  related-work.md  simai-analysis.md  simai-benchmark-code.md  simai-benchmark-proposals.md  status-and-roadmap.md  task-design-lessons.md  task-intake-and-publication-gates.md  task-taxonomy.md
mlsysbench/: __init__.py
scripts/: build_shadow_vllm_workloads.py  build_vllm_batch_time_profile.py  check_repo.sh  deepgemm_nvcc_sm89_wrapper.sh  prepare_azure_trace_windows.py  profile_vllm_executor.py  replay_vllm_workload_hardware.py  run_codex_siliconflow_matrix.sh  run_mock_protocol_experiment.sh  run_real_simai_vidur_aicb_benchmark.sh  run_real_simai_vidur_aicb_smoke.sh  validate_vllm_batch_time_profile.py  verify_azure_vllm_candidate.py
tasks/: README.md
tests/: test_aggregation.py  test_replay_vllm_workload_hardware.py  test_simai_bench.py  test_validate_vllm_batch_time_profile.py  test_vllm_batch_time_model.py  test_vllm_scheduler_candidate_driver.py
(+135 files in other folders)
