[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsysbench"
version = "0.1.0"
description = "Simulator-grounded evaluation of AI agents on inference-system optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "MLSysBench contributors"}]
dependencies = []

[project.scripts]
mlsysbench = "mlsysbench.simai_bench.__main__:entrypoint"

[project.urls]
Repository = "https://github.com/haiyuanwan/MLSysBench"
Documentation = "https://github.com/haiyuanwan/MLSysBench/tree/main/docs"

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
test = ["pytest>=8"]
hpo = [
  "optuna>=4.0",
  "smac>=2.3",
  "ConfigSpace>=1.2",
  "scikit-learn>=1.6.1,<1.8",
]

[tool.setuptools.packages.find]
include = ["mlsysbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
